# mc-server-manager

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_tests.yml
mc_server_manager/: __init__.py  server_manager.py
tests/: test_server_control.py  test_server_query.py  test_server_rcon.py  unit_tests.py
